Made a generic recycler view adapter utility class and generalized data models which is to be shown in list type views

--- a/app/src/main/res/layout/fragment_private_messages.xml
+++ b/app/src/main/res/layout/fragment_private_messages.xml
@@ -21,6 +21,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:menu="@menu/private_messages_menu"
             app:navigationIcon="@drawable/ic_back_arrow"
+            app:titleTextColor="@color/bw"
             app:title="Message"
             app:titleCentered="true"
             app:titleTextAppearance="@style/messagesTitleTextStyle" />
