--- a/app/src/main/res/menu/main_toolbar_menu.xml
+++ b/app/src/main/res/menu/main_toolbar_menu.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/search"
         android:title="Search"
-        android:icon="@drawable/ic_search"
+        android:icon="@drawable/ic_search_white"
         android:contentDescription="Search"
         app:showAsAction="ifRoom" />
 
