--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -42,4 +42,9 @@
         android:name="com.sougata.chatly.features.discover.ui.AddFriendFragment"
         android:label="fragment_add_friend"
         tools:layout="@layout/fragment_add_friend"/>
+    <fragment
+        android:id="@+id/friendRequestsFragment"
+        android:name="com.sougata.chatly.features.discover.ui.FriendRequestsFragment"
+        android:label="fragment_friend_requests"
+        tools:layout="@layout/fragment_friend_requests"/>
 </navigation>
