--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
@@ -9,7 +8,7 @@
         android:layout_height="match_parent"
         android:background="@drawable/blue_gradient_bg"
         android:fitsSystemWindows="true"
-        tools:context=".features.discover.ui.FriendRequestsFragment">
+        tools:context=".features.discover.ui.FriendsFragment">
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolBar"
@@ -22,37 +21,21 @@
             app:layout_constraintTop_toTopOf="parent"
             app:navigationIcon="@drawable/ic_back_arrow"
             app:navigationIconTint="@color/white"
-            app:title="Friend Requests"
+            app:title="Your Friends"
             app:titleCentered="true"
             app:titleTextAppearance="@style/messagesTitleTextStyle"
             app:titleTextColor="@color/white" />
 
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/bw_background"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolBar"
-            app:layout_scrollEffect="none"
-            app:layout_scrollFlags="scroll|enterAlways|snap"
-            app:tabIndicatorAnimationMode="elastic"
-            app:tabIndicatorColor="@color/light_blue_dark"
-            app:tabRippleColor="@color/light_blue"
-            app:tabTextColor="@color/bw" />
-
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewPager"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:background="@color/bw_background"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:listitem="@layout/item_friend"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tabLayout" />
+            app:layout_constraintTop_toBottomOf="@id/toolBar" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </layout>
