--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -41,10 +41,15 @@
         android:id="@+id/addFriendFragment"
         android:name="com.sougata.chatly.features.discover.ui.AddFriendFragment"
         android:label="fragment_add_friend"
-        tools:layout="@layout/fragment_add_friend"/>
+        tools:layout="@layout/fragment_add_friend" />
     <fragment
         android:id="@+id/friendRequestsFragment"
         android:name="com.sougata.chatly.features.discover.ui.FriendRequestsFragment"
         android:label="fragment_friend_requests"
-        tools:layout="@layout/fragment_friend_requests"/>
+        tools:layout="@layout/fragment_friend_requests" />
+    <fragment
+        android:id="@+id/friendsFragment"
+        android:name="com.sougata.chatly.features.discover.ui.FriendsFragment"
+        android:label="fragment_friends"
+        tools:layout="@layout/fragment_friends" />
 </navigation>
