--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -19,6 +19,9 @@
             android:id="@+id/ivProfileImage"
             android:layout_width="42dp"
             android:layout_height="42dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:focusable="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -85,10 +88,10 @@
             android:textColor="@color/unread_message"
             android:textSize="12sp"
             android:textStyle="bold"
-            app:layout_constraintHorizontal_bias="1"
-            app:layout_constraintStart_toStartOf="@id/tvLastMessageDate"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/tvLastMessageDate"
+            app:layout_constraintHorizontal_bias="1"
+            app:layout_constraintStart_toStartOf="@id/tvLastMessageDate"
             app:layout_constraintTop_toBottomOf="@id/tvLastMessageDate"
             app:layout_constraintVertical_chainStyle="spread_inside"
             tools:text="21:15" />
