--- a/app/src/main/res/menu/main_bottom_nav_menu.xml
+++ b/app/src/main/res/menu/main_bottom_nav_menu.xml
@@ -8,7 +8,7 @@
     <item
         android:id="@+id/groupsHomeFragment"
         android:enabled="true"
-        android:icon="@drawable/ic_groups"
+        android:icon="@drawable/ic_group"
         android:title="Groups"/>
     <item
         android:id="@+id/profileHomeFragment"
