--- a/app/src/main/res/menu/toolbar_add_menu.xml
+++ b/app/src/main/res/menu/toolbar_add_menu.xml
@@ -7,7 +7,7 @@
 
     <item
         android:id="@+id/createGroup"
-        android:icon="@drawable/ic_groups"
+        android:icon="@drawable/ic_group"
         android:title="Create Group" />
 
     <item
