--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -52,4 +52,9 @@
         android:name="com.sougata.chatly.features.discover.ui.FriendsFragment"
         android:label="fragment_friends"
         tools:layout="@layout/fragment_friends" />
+    <fragment
+        android:id="@+id/userProfileFragment"
+        android:name="com.sougata.chatly.features.discover.ui.UserProfileFragment"
+        android:label="fragment_user_profile"
+        tools:layout="@layout/fragment_user_profile"/>
 </navigation>
